# mcp-server-project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.kiro/settings/: mcp.json
2_intro/: mcp_intro.py  mcp_server.py  tienda_videojuegos.db
2_mcp_db/: mcp_db_server.py  pyproject.toml
3_mcp_gmail/: gmail_mcp_server.py  pyproject.toml
4_mcp_client/: app.py  client.py
