[project]
name = "mcp-servers-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
